--- a/lifeish/index.html
+++ b/lifeish/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-     <title> Life-ish </title>
+     <title> life-ish </title>
      <link href="style.css" rel="stylesheet" />
 </head>
 
