--- a/Life_Clock/index.html
+++ b/Life_Clock/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>You don't actually get given 4000 weeks, or even one week.</h1> 
+    <h1>You are not actually given 4000 weeks, or even one week.</h1> 
     <h1>You only get one moment after the other.</h1>
     <section class="container" id="data_container">
         <div class="input_wrap">
