--- a/life_clock_final/index.html
+++ b/life_clock_final/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+     <audio autoplay loop>
+        <source src="music/poolz_lookingatthesamestar.mp3" type="audio/mpeg">
+    </audio>
+    
     <header class="header">
         <div class="header-left">
             <img src="icons/rt_logo.png" alt="Logo" class="header-logo">
