--- a/life_clock_final/index.html
+++ b/life_clock_final/index.html
@@ -5,12 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Life Clock</title>
     <link rel="stylesheet" href="style.css">
+    <script src="audio-player.js"></script>
 </head>
 <body>
-     <audio autoplay loop>
-        <source src="music/poolz_lookingatthesamestar.mp3" type="audio/mpeg">
-    </audio>
-    
     <header class="header">
         <div class="header-left">
             <img src="icons/rt_logo.png" alt="Logo" class="header-logo">
