--- a/life_clock_final/about.html
+++ b/life_clock_final/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Life Clock</title>
     <link rel="stylesheet" href="style.css">
+    <script src="audio-player.js"></script>
 </head>
 <body>
     <header class="header">
