--- a/life_clock_final/index.html
+++ b/life_clock_final/index.html
@@ -70,7 +70,7 @@
 
             <svg class="circle-svg" width="300" height="300" viewBox="0 0 300 300">
                 <defs>
-                    <!-- Define a circular path with a larger radius to match the life lived circle, help from chatGPT -->
+                    <!-- Define a circular path with a larger radius to match the life lived circle, help from chatGPT, complete circular path with a radius of 125 units, centered at (150, 150) -->
                     <path id="text-circle" d="M 150, 150 m -125, 0 a 125,125 0 1,1 250,0 a 125,125 0 1,1 -250,0" />
                 </defs>
                 <text class="circular-text">
