--- a/life_clock_final/about.html
+++ b/life_clock_final/about.html
@@ -31,15 +31,15 @@
 
     <section class="about-container">
        <h3>the human lifespan is comically short.</h3>
-       <p>Since we have not experienced death, we cannot truly fear it. Even in our imagined deaths, we are still acting spectators. We go on about our days as if we are immortal, and it is through this denial of death that we constrict ourselves. Modern society’s obsession with lengthening to-do lists is bizarre. We’ve even rebranded this incessant busyness as “hustling,” a lifestyle choice worth boasting about on social media.</p> 
+             <p>if we live to 78, we live around 4000 weeks. since we have not experienced death, we cannot truly fear it. even in our imagined deaths, we are still acting spectators. we go on about our days as if we are immortal, and it is through this denial of death that we constrict ourselves. modern society’s obsession with lengthening to-do lists is bizarre. we’ve even rebranded this incessant busyness as “hustling,” a lifestyle choice worth boasting about on social media.</p> 
 
        <p>&nbsp;</p>
 
-        <p>If we can embrace the limitations of life, then we might realize we can trade an easy life for a simple one. With 4000 weeks, I still have snow to touch, wind to feel, love to exist in, and apologies to give. Once we can embrace the certainty of death, we can finally live.</p>
+        <p>if we can embrace the limitations of life, then we might realize we can trade an easy life for a simple one. with 4000 weeks, I still have snow to touch, wind to feel, love to exist in, and apologies to give. once we can embrace the certainty of death, we can finally live.</p>
 
         <p>&nbsp;</p>
 
-        <p>The world is full of wonder, and I hope you get to experience more of that wonder.</p>
+        <p>the world is full of wonder, and i hope you get to experience more of that wonder.</p>
     </section>
 
     <footer class="footer">
