--- a/life_clock_final/about.html
+++ b/life_clock_final/about.html
@@ -44,7 +44,7 @@
 
         <p>&nbsp;</p>
 
-        <p>the world is full of wonder, and i hope you get to experience more of that wonder.</p>
+        <p>the world is full of wonder, and i hope you get to experience it.</p>
     </section>
 
     <footer class="footer">
