--- a/life_clock_testing/index-mobile.html
+++ b/life_clock_testing/index-mobile.html
@@ -75,7 +75,7 @@
                 <h2>life lived</h2>
             </div>
 
-                        <!-- <svg class="circle-svg" viewBox="0 0 300 300" preserveAspectRatio="xMidYMid meet">
+            <svg class="circle-svg" viewBox="0 0 300 300" preserveAspectRatio="xMidYMid meet">
                 <defs>
                     <path id="text-circle" d="M 150, 150 m -125, 0 a 125,125 0 1,1 250,0 a 125,125 0 1,1 -250,0" />
                 </defs>
@@ -84,7 +84,7 @@
                         · what are you going to do with your remaining sunrises? ·
                     </textPath>
                 </text>
-            </svg> -->
+            </svg>
 
             <svg class="progress-circle" viewBox="0 0 300 300">
                 <circle class="progress-stroke" cx="150" cy="150" r="140"/>
