--- a/life_clock_testing/index-mobile.html
+++ b/life_clock_testing/index-mobile.html
@@ -93,7 +93,7 @@
         <button class="button" data-target="#section4">FOOD FOR THOUGHT →</button>
     </div>
     <div class="section" id="section4">
-        <h1>what are you waiting for?</h1>
+        <h1 id="dynamic-text">what are you going to do with your remaining sunrises?</h1>
         <h4>since we have not experienced death, we cannot truly fear it. even in our imagined deaths, we are still acting spectators. we go on about our days as if we are immortal, and it is through this denial of death that we constrict ourselves. modern society’s obsession with lengthening to-do lists is bizarre. we’ve even rebranded this incessant busyness as “hustling,” a lifestyle choice worth boasting about on social media.</h4> 
         <h4>an easy life is not equivalent to a simple one, and to want little is, in fact, much. with 4000 weeks, i still have snow to touch, wind to feel, love to exist in, and apologies to give. once we can embrace the certainty of death, we can finally live.</h4>
         <h4>the world is full of wonder, and i hope you get to experience more of it.</h4>
