--- a/life_clock_testing/index-mobile.html
+++ b/life_clock_testing/index-mobile.html
@@ -80,7 +80,9 @@
                     <path id="text-circle" d="M 150, 150 m -125, 0 a 125,125 0 1,1 250,0 a 125,125 0 1,1 -250,0" />
                 </defs>
                 <text class="circular-text">
-
+			<textPath href="#text-circle" startOffset="50%" dominant-baseline="middle">
+                      
+                    	</textPath>
                 </text>
             </svg>
 
