--- a/life_clock_testing/index.html
+++ b/life_clock_testing/index.html
@@ -33,7 +33,7 @@
     </header>
 
     <div class="section" id="section1">
-        <h1>the human lifespan is comically short.</h1>
+        <h1>the human lifespan is comically short</h1>
         <h4>if you live to 78, you have around 4000 weeks.</h4>
         <button class="button" data-target="#section2">SEE YOUR LIFE IN WEEKS →</button>
     </div>
