--- a/life_clock_testing/index.html
+++ b/life_clock_testing/index.html
@@ -14,6 +14,7 @@
             <img src="icons/rt_logo.png" alt="Logo" class="header-logo">
         </div>
         <div class="header-right">
+            <img id="playPauseButton" src="icons/pausebutton.png" alt="Play/Pause Button">
             <a href="#section3" class="refreshBtn">ABOUT</a>
             &nbsp;
             <a href="#section1" class="refreshBtn">HOME</a>
@@ -33,7 +34,7 @@
     </header>
 
     <div class="section" id="section1">
-        <h1>the human lifespan is comically short</h1>
+        <h1>the human lifespan is comically short.</h1>
         <h4>if you live to 78, you have around 4000 weeks.</h4>
         <button class="button" data-target="#section2">SEE YOUR LIFE IN WEEKS →</button>
     </div>
